dashboard: fix legend on Firefox
On Firefox, the legend was 25px below where it should have
been.
Adding a padding-top fixes it and has no impact on Chrome.

Reported-by: David Stryker <dstryker@ning.com>

--- a/dashboard/src/main/webapp/static/css/arecibo.css
+++ b/dashboard/src/main/webapp/static/css/arecibo.css
@@ -35,6 +35,8 @@
     /* By default, Rickshaw offsets the graph. I'm not sure why, but it's hardcoded.
        See berthRate parameter in Rickshaw.Graph.Axis.Y */
     margin-top: -25px;
+    /* Required on Firefox to adjust for the legend */
+    padding-top: 25px;
 }
 
 .display_controls {
